@@ -1,3 +1,9 @@
+2025-04-10  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/gitsync.R (git_info): add function, which
+        collects status and other information from
+        repositories
+
 2025-03-19  Enrico Schumann  <es@enricoschumann.net>
 
         * R/gitsync.R (git_bundle_create): show name of
